добавил перенос в бд из users в students, наладил добавление оценок

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,9 +3,10 @@
     "DefaultConnection": "Data Source=gradebot.db"
   },
   "Jwt": {
-    "Issuer": "your-issuer",
-    "Audience": "your-audience",
-    "Key": "your-secret-key"
+    "Issuer": "GradeBot",
+    "Audience": "GradeBotUsers",
+    "Key": "my-super-secret-key",
+    "ExpiresInMinutes": 60
   },
   "Logging": {
     "LogLevel": {
