закночил интеграцию бота, он работает, все ок

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,19 +1,22 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=gradebot.db"
+  "TelegramBotSettings": {
+    "Token": "7944585089:AAG8Li0i1fA1_z5Zv6BSxtxMC-ttmiC6x_Q"
   },
-  "Jwt": {
-    "Issuer": "GradeBot",
-    "Audience": "GradeBotUsers",
-    "Key": "my-super-secret-key",
-    "ExpiresInMinutes": 60
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=gradebot.db"
+    },
+    "Jwt": {
+      "Issuer": "GradeBot",
+      "Audience": "GradeBotUsers",
+      "Key": "my-super-secret-key",
+      "ExpiresInMinutes": 300000
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 
